--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   },
   "settings": {
     "more_apps_url": "https://play.solodroid.co.id/store/apps/",
-    "privacy_policy_url": "https://example.com/privacy-policy.html",
+    "privacy_policy_url": "https://sites.google.com/view/royal-fonts-privacy-policy/home",
     "terms_conditions_url": "https://example.com/terms-conditions.html",
     "email_help_feedback": "royal-fontpack@gmail.com",
     "show_wallpaper_name": true,
